# rootless-docker

./: .dictionary.txt  .gitignore  .jscpd.json  .markdownlint.yaml  .mega-linter.yaml  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  LICENSE  README.md  action.yaml  cspell.config.yaml  pyproject.toml
.github/: renovate.json
.github/workflows/: bump-version.yaml  notify-assignee.yaml  notify-reviewers.yaml  test.yaml
