[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool]
  [tool.commitizen]
  version_provider = "poetry"
  version_files = ["README.md:rootless-docker@"]
  major_version_zero = true

  [tool.poetry]
  name = "rootless-docker"
  version = "0.2.2"
  description = "Run Docker in Rootless Mode to Prevent Permission Errors"
  authors = ["Kurt von Laven <kurt.von.laven@gmail.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  # Keep in sync with .pre-commit-config.yaml and .tool-versions.
  python = "==3.12.2"

  [tool.poetry.group.dev.dependencies]
  commitizen = "==3.13.0" # Keep in sync with .pre-commit-config.yaml.
  pre-commit = "==3.6.0"
